<resources>
    <string name="app_name">Ecommers</string>
    <string name="letzz_shope_online">Letzz Shope Online....</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="i_am_admin">I\'am Admin..</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="add_new_product">Add New Product</string>
    <string name="productname">ProductName</string>
    <string name="product_description">Product Description....</string>
    <string name="product_price">Product Price</string>
    <string name="add_product">Add Product</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
</resources>
